mudanças nos paineis